# 26_wuren_hjy

./: README.md  笔记1.docx
CMake作业/CMake 1/: CMakeLists.txt  README.md
CMake作业/CMake 1/common/kalman/: CMakeLists.txt
CMake作业/CMake 1/common/math/: CMakeLists.txt
CMake作业/CMake 1/modules/A1/: CMakeLists.txt
CMake作业/CMake 1/modules/A2/: CMakeLists.txt
CMake作业/CMake 1/modules/A2/include/: A2.h
CMake作业/CMake 1/modules/M2/: CMakeLists.txt
homework/: README.md  笔记2.docx
homework/作业1/: 作业1要求.txt
homework/作业1/模拟退火算法/: TSP.cpp
homework/作业1/模拟退火算法/output/: TSP.txt
homework/作业2/: 一元线性回归.ipynb  带正则化的多元线性回归.ipynb  手搓多元线性回归.ipynb
homework/作业3/: svm_iris.py
homework/作业4/: Kmeans_Exp.ipynb  cluster_dataset.mat
homework3/: makedown.docx
homework3/作业1/: cone_model.pth  dataset.py  model.py  readme.md  test.py  train.py
linux-homework/: homework1.sh
linux-homework/linux_practice/docs/: daily_report.txt
